imp - Override themes to clean up Terminaux code
---

We have used a new feature to override the themes to clean up Terminaux
code instead of the Nitrocid-specific color types that existed in earlier
Terminaux versions.

---

Type: imp
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.es.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.es.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Imprima la línea del modelo como una sola línea</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>El tema predeterminado para el kernel</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Acentos por todas partes!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Líquido incoloro, humeante y altamente corrosivo.</value>
+  </data>
 
 </root>
