--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Print the modeline as one line</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>The default theme for the kernel</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Accents everywhere!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Colorless, fuming, and highly corrosive liquid</value>
+  </data>
 
 </root>
