--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.tr.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.tr.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Model çizgisini tek satır olarak yazdırın.</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Çekirdek için varsayılan tema</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Her yerde aksanlar!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Renksiz, dumanlı ve oldukça aşındırıcı sıvı</value>
+  </data>
 
 </root>
