--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.vi.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.vi.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>In dòng modeline thành một dòng duy nhất.</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Chủ đề mặc định cho hạt nhân</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Giọng điệu ở khắp mọi nơi!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Chất lỏng không màu, bốc khói và có tính ăn mòn cao</value>
+  </data>
 
 </root>
