--- a/public/Nitrocid.Base/Resources/Languages/tky.json
+++ b/public/Nitrocid.Base/Resources/Languages/tky.json
@@ -9378,6 +9378,18 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC",
       "text": "Model çizgisini tek satır olarak yazdırın."
+    },
+    {
+      "loc": "NKS_THEMES_DEFAULT_DESC",
+      "text": "Çekirdek için varsayılan tema"
+    },
+    {
+      "loc": "NKS_THEMES_DYNAMIC_DESC",
+      "text": "Her yerde aksanlar!"
+    },
+    {
+      "loc": "NKS_THEMES_NITRICACID_DESC",
+      "text": "Renksiz, dumanlı ve oldukça aşındırıcı sıvı"
     }
   ]
 }
