--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ar.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>اطبع سطر النموذج كسطر واحد</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>الموضوع الافتراضي للنواة</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>لهجات في كل مكان!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>سائل عديم اللون، دخاني، وشديد التآكل</value>
+  </data>
 
 </root>
