--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.de.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.de.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Drucken Sie die Modellzeile als eine Zeile</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Das Standarddesign für den Kernel</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Überall Akzente!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Farblose, rauchende und stark ätzende Flüssigkeit</value>
+  </data>
 
 </root>
