--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.el.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.el.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Εκτυπώστε τη γραμμή μοντέλου ως μία γραμμή</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Το προεπιλεγμένο θέμα για τον πυρήνα</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Προφορές παντού!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Άχρωμο, ατμίζον και εξαιρετικά διαβρωτικό υγρό</value>
+  </data>
 
 </root>
