--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.fr.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.fr.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Afficher la ligne de mode sur une seule ligne</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Le thème par défaut du noyau</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Des accents partout !</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Liquide incolore, fumant et hautement corrosif</value>
+  </data>
 
 </root>
