--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.it.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.it.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Stampa la modeline come una riga</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Il tema predefinito per il kernel</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Accenti ovunque!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Liquido incolore, fumante e altamente corrosivo</value>
+  </data>
 
 </root>
