--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ja.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ja.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>モードラインを1行で印刷する</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>カーネルのデフォルトテーマ</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>どこにでもアクセントがあります！</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>無色で発煙性があり、非常に腐食性の高い液体</value>
+  </data>
 
 </root>
