--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.la.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.la.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Imprime lineam exemplaris ut unam lineam</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>The default theme pro nucleo</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>ubique accentum!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Hyalina, fumans et liquida valde mordax</value>
+  </data>
 
 </root>
