--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ms.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ms.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Cetak modelin sebagai satu baris</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Tema lalai untuk kernel</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Aksen di mana-mana!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Cecair tidak berwarna, berasap dan sangat menghakis</value>
+  </data>
 
 </root>
