--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nb.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nb.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Skriv ut modellinen som én linje</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Standardtemaet for kjernen</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Aksenter overalt!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Fargeløs, rykende og sterkt etsende væske</value>
+  </data>
 
 </root>
