--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nl.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nl.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Print de modellijn als één regel.</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Het standaardthema voor de kernel</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Overal accenten!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Kleurloze, dampende en zeer bijtende vloeistof</value>
+  </data>
 
 </root>
