--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.pt.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.pt.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Imprima a modeline como uma única linha.</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>O tema padrão para o kernel</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Acentos em todo o lado!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Líquido incolor, furioso e altamente corrosivo</value>
+  </data>
 
 </root>
