--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.uk.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.uk.resx
@@ -7146,5 +7146,14 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC" xml:space="preserve">
     <value>Вивести модельну лінію одним рядком</value>
   </data>
+  <data name="NKS_THEMES_DEFAULT_DESC" xml:space="preserve">
+    <value>Стандартна тема для ядра</value>
+  </data>
+  <data name="NKS_THEMES_DYNAMIC_DESC" xml:space="preserve">
+    <value>Скрізь акценти!</value>
+  </data>
+  <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
+    <value>Безбарвна, димляча та сильно корозійна рідина</value>
+  </data>
 
 </root>
