--- a/public/Nitrocid.Base/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/ind-T.json
@@ -9377,6 +9377,18 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC",
       "text": "मोडलाइन को एक लाइन में प्रिंट करें"
+    },
+    {
+      "loc": "NKS_THEMES_DEFAULT_DESC",
+      "text": "कर्नेल के लिए डिफ़ॉल्ट थीम"
+    },
+    {
+      "loc": "NKS_THEMES_DYNAMIC_DESC",
+      "text": "हर जगह उच्चारण!"
+    },
+    {
+      "loc": "NKS_THEMES_NITRICACID_DESC",
+      "text": "रंगहीन, धुआँदार और अत्यधिक संक्षारक तरल"
     }
   ]
 }
