--- a/public/Nitrocid.Base/Resources/Languages/ita.json
+++ b/public/Nitrocid.Base/Resources/Languages/ita.json
@@ -9380,6 +9380,18 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC",
       "text": "Stampa la modeline come una riga"
+    },
+    {
+      "loc": "NKS_THEMES_DEFAULT_DESC",
+      "text": "Il tema predefinito per il kernel"
+    },
+    {
+      "loc": "NKS_THEMES_DYNAMIC_DESC",
+      "text": "Accenti ovunque!"
+    },
+    {
+      "loc": "NKS_THEMES_NITRICACID_DESC",
+      "text": "Liquido incolore, fumante e altamente corrosivo"
     }
   ]
 }
