--- a/public/Nitrocid.Base/Resources/Languages/mal.json
+++ b/public/Nitrocid.Base/Resources/Languages/mal.json
@@ -9380,6 +9380,18 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC",
       "text": "Cetak modelin sebagai satu baris"
+    },
+    {
+      "loc": "NKS_THEMES_DEFAULT_DESC",
+      "text": "Tema lalai untuk kernel"
+    },
+    {
+      "loc": "NKS_THEMES_DYNAMIC_DESC",
+      "text": "Aksen di mana-mana!"
+    },
+    {
+      "loc": "NKS_THEMES_NITRICACID_DESC",
+      "text": "Cecair tidak berwarna, berasap dan sangat menghakis"
     }
   ]
 }
