--- a/public/Nitrocid.Base/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Base/Resources/Languages/ptg.json
@@ -9387,6 +9387,18 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC",
       "text": "Imprima a modeline como uma única linha."
+    },
+    {
+      "loc": "NKS_THEMES_DEFAULT_DESC",
+      "text": "O tema padrão para o kernel"
+    },
+    {
+      "loc": "NKS_THEMES_DYNAMIC_DESC",
+      "text": "Acentos em todo o lado!"
+    },
+    {
+      "loc": "NKS_THEMES_NITRICACID_DESC",
+      "text": "Líquido incolor, furioso e altamente corrosivo"
     }
   ]
 }
