--- a/public/Nitrocid.Base/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Base/Resources/Languages/rmn.json
@@ -9378,6 +9378,18 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_MODELINE_SWITCH_ONELINE_DESC",
       "text": "Afișează linia modelului pe o singură linie"
+    },
+    {
+      "loc": "NKS_THEMES_DEFAULT_DESC",
+      "text": "Tema implicită pentru nucleu"
+    },
+    {
+      "loc": "NKS_THEMES_DYNAMIC_DESC",
+      "text": "Accente peste tot!"
+    },
+    {
+      "loc": "NKS_THEMES_NITRICACID_DESC",
+      "text": "Lichid incolor, fumos și foarte coroziv"
     }
   ]
 }
