add - Added new locs for resources manager
---

In the internal resources manager, we've added new localization
information.

---

Type: add
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ar.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>سائل عديم اللون، دخاني، وشديد التآكل</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>لم يتم العثور على المورد {0} للنوع {1} في {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>لم يتم العثور على المورد {0} للنوع {1} في هذا التجميع غير المعروف</value>
+  </data>
 
 </root>
