--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.fr.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.fr.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Liquide incolore, fumant et hautement corrosif</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Ressource {0} introuvable pour le type {1} dans {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Ressource {0} introuvable pour le type {1} dans cet assemblage inconnu</value>
+  </data>
 
 </root>
