--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nb.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nb.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Fargeløs, rykende og sterkt etsende væske</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Ressurs {0} ikke funnet for typen {1} i {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Ressurs {0} ikke funnet for typen {1} i denne ukjente samlingen</value>
+  </data>
 
 </root>
