--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.zh.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.zh.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>無色、發煙、高腐蝕性液體</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>在 {2} 中找不到類型為 {1} 的資源 {0}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>在此未知程式集中找不到類型為 {1} 的資源 {0}</value>
+  </data>
 
 </root>
