--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.de.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.de.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Farblose, rauchende und stark ätzende Flüssigkeit</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Ressource {0} für Typ {1} in {2} nicht gefunden</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Ressource {0} für Typ {1} in dieser unbekannten Assembly nicht gefunden</value>
+  </data>
 
 </root>
