--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.el.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.el.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Άχρωμο, ατμίζον και εξαιρετικά διαβρωτικό υγρό</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Δεν βρέθηκε πόρος {0} για τον τύπο {1} στο {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Δεν βρέθηκε πόρος {0} για τον τύπο {1} σε αυτήν την άγνωστη συναρμολόγηση</value>
+  </data>
 
 </root>
