--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.es.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.es.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Líquido incoloro, humeante y altamente corrosivo.</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>No se encontró el recurso {0} para el tipo {1} en {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>No se encontró el recurso {0} para el tipo {1} en este ensamblado desconocido</value>
+  </data>
 
 </root>
