--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.id.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.id.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Cairan tidak berwarna, berasap, dan sangat korosif</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Sumber daya {0} tidak ditemukan untuk tipe {1} di {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Sumber daya {0} tidak ditemukan untuk tipe {1} di rakitan yang tidak dikenal ini</value>
+  </data>
 
 </root>
