--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.it.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.it.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Liquido incolore, fumante e altamente corrosivo</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Risorsa {0} non trovata per il tipo {1} in {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Risorsa {0} non trovata per il tipo {1} in questo assembly sconosciuto</value>
+  </data>
 
 </root>
