--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ko.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ko.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>무색, 연기가 나고 부식성이 강한 액체</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>{2}에서 형식 {1}에 대한 리소스 {0}을 찾을 수 없습니다.</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>이 알 수 없는 어셈블리에서 형식 {1}에 대한 리소스 {0}을 찾을 수 없습니다.</value>
+  </data>
 
 </root>
