--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.la.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.la.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Hyalina, fumans et liquida valde mordax</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Copia {0} non inventa pro genere {1} in {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Copia {0} non inventa pro genere {1} in hac congregatione ignota</value>
+  </data>
 
 </root>
