--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nl.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.nl.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Kleurloze, dampende en zeer bijtende vloeistof</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Bron {0} niet gevonden voor type {1} in {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Bron {0} niet gevonden voor type {1} in deze onbekende assembly</value>
+  </data>
 
 </root>
