--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Colorless, fuming, and highly corrosive liquid</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Resource {0} not found for type {1} in {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Resource {0} not found for type {1} in this unknown assembly</value>
+  </data>
 
 </root>
