--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ro.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ro.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Lichid incolor, fumos și foarte coroziv</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Resursa {0} nu a fost găsită pentru tipul {1} ​​în {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Resursa {0} nu a fost găsită pentru tipul {1} ​​în acest ansamblu necunoscut</value>
+  </data>
 
 </root>
