--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.uk.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.uk.resx
@@ -7155,5 +7155,11 @@
   <data name="NKS_THEMES_NITRICACID_DESC" xml:space="preserve">
     <value>Безбарвна, димляча та сильно корозійна рідина</value>
   </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM" xml:space="preserve">
+    <value>Ресурс {0} не знайдено для типу {1} ​​у {2}</value>
+  </data>
+  <data name="NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM" xml:space="preserve">
+    <value>Ресурс {0} не знайдено для типу {1} ​​у цій невідомій збірці</value>
+  </data>
 
 </root>
