--- a/public/Nitrocid.Base/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/arb-T.json
@@ -9415,6 +9415,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "سائل عديم اللون، دخاني، وشديد التآكل"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "لم يتم العثور على المورد {0} للنوع {1} في {2}"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "لم يتم العثور على المورد {0} للنوع {1} في هذا التجميع غير المعروف"
     }
   ]
 }
