--- a/public/Nitrocid.Base/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/chi-T.json
@@ -9397,6 +9397,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "无色、发烟、强腐蚀性液体"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "在 {2} 中找不到类型为 {1} 的资源 {0}"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "在此未知程序集中找不到类型为 {1} 的资源 {0}"
     }
   ]
 }
