--- a/public/Nitrocid.Base/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/ind-T.json
@@ -9389,6 +9389,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "रंगहीन, धुआँदार और अत्यधिक संक्षारक तरल"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "{2} में टाइप {1} के लिए रिसोर्स {0} नहीं मिला"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "इस अनजान असेंबली में टाइप {1} के लिए रिसोर्स {0} नहीं मिला"
     }
   ]
 }
