--- a/public/Nitrocid.Base/Resources/Languages/ind.json
+++ b/public/Nitrocid.Base/Resources/Languages/ind.json
@@ -9389,6 +9389,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "rangaheen, dhunaadhaar aur atyadhik sankshaarak taral"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "{2} mein taip {1} ke lie risors {0} nahin mila"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "is anajaan asembalee mein taip {1} ke lie risors {0} nahin mila"
     }
   ]
 }
