--- a/public/Nitrocid.Base/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Base/Resources/Languages/jpn.json
@@ -9389,6 +9389,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "無色で発煙性があり、非常に腐食性の高い液体"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "{2} 内のタイプ {1} のリソース {0} が見つかりません"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "この不明なアセンブリ内のタイプ {1} のリソース {0} が見つかりません"
     }
   ]
 }
