--- a/public/Nitrocid.Base/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/kor-T.json
@@ -9390,6 +9390,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "무색, 연기가 나고 부식성이 강한 액체"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "{2}에서 형식 {1}에 대한 리소스 {0}을 찾을 수 없습니다."
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "이 알 수 없는 어셈블리에서 형식 {1}에 대한 리소스 {0}을 찾을 수 없습니다."
     }
   ]
 }
