--- a/public/Nitrocid.Base/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Base/Resources/Languages/ltn.json
@@ -9389,6 +9389,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "Hyalina, fumans et liquida valde mordax"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "Copia {0} non inventa pro genere {1} in {2}"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "Copia {0} non inventa pro genere {1} in hac congregatione ignota"
     }
   ]
 }
