--- a/public/Nitrocid.Base/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Base/Resources/Languages/ukr.json
@@ -9389,6 +9389,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "Безбарвна, димляча та сильно корозійна рідина"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "Ресурс {0} не знайдено для типу {1} ​​у {2}"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "Ресурс {0} не знайдено для типу {1} ​​у цій невідомій збірці"
     }
   ]
 }
