--- a/public/Nitrocid.Base/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Base/Resources/Languages/vtn.json
@@ -9389,6 +9389,14 @@
     {
       "loc": "NKS_THEMES_NITRICACID_DESC",
       "text": "Chất lỏng không màu, bốc khói và có tính ăn mòn cao"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_KNOWNASM",
+      "text": "Không tìm thấy tài nguyên {0} cho loại {1} trong {2}"
+    },
+    {
+      "loc": "NKS_MISC_REFLECTION_INTERNAL_EXCEPTION_RESNOTFOUND_UNKNOWNASM",
+      "text": "Không tìm thấy tài nguyên {0} cho loại {1} trong cụm lắp ráp không xác định này"
     }
   ]
 }
