dev - Started development of 0.1.0 Service Pack 6
---

Type: dev
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.526-0.1.0.67-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Thu, 22 Jan 2026 12:32:01 +0300
+
 nitrocid-25 (3.0.25.526-0.1.0.66-1) noble; urgency=medium
 
   * Updated Terminaux
