--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nitrocid-27 (3.1.27.58-0.1.2.33-1) noble; urgency=medium
 
-  * General improvements and bug fixes
+  * Updated Terminaux to v8.1
+  * Made improvements to screensavers
 
  -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Thu, 22 Jan 2026 14:58:22 +0300
 
